# gogh

./: README.md  gogh.cabal
Text/Gogh/: SafeShow.hs
Text/Gogh/Compiler/: CodeGen.hs  Main.hs  Parser.hs  Utils.hs
Text/Gogh/Compiler/CodeGen/: Haskell.hs  JavaScript.hs
Text/Templating/Gogh/Compiler/: CodeGen.hs  Main.hs  Parser.hs
resources/: lib.js
src/compiler/: CodeGen.hs  Main.hs  Parser.hs
tests/: Template1.gog  Template1.soy
