Cabal-Version:          >= 1.6
Name:                   gogh
Version:                0.0.1
Author:                 Francesco Mazzoli (f@mazzo.li)
Maintainer:             Francesco Mazzoli (f@mazzo.li)
Build-Type:             Simple
License:                BSD3
Build-Type:             Simple
Category:               Web
Synopsis:               Templates compiled to Haskell/JavaScript
Tested-With:            GHC==7.0.3
Description:
  Templates that can be compiled to Haskell or to JavaScript. Inspired by Google
  closure templates: <http://code.google.com/closure/templates/>

source-repository head
  type:                 git
  location:             git://github.com/rostayob/gogh.git

Library
  Build-Depends:        base >= 4 && <5
  GHC-Options:          -Wall
  Exposed-Modules:      Text.Gogh.SafeShow
                      , Text.Gogh.Compiler.Utils

Executable gogh
  Main-Is:              Text/Gogh/Compiler/Main.hs
  Build-Depends:        base >= 4 && < 5
                      , parsec >= 3 && < 4
                      , mtl
                      , haskell-src-exts
                      , pretty
  GHC-Options:          -Wall -fno-warn-unused-do-bind
